--- a/frontend/src/metabase/visualizations/components/legend/LegendLabel.module.css
+++ b/frontend/src/metabase/visualizations/components/legend/LegendLabel.module.css
@@ -1,6 +1,8 @@
 .text {
   color: var(--mb-color-text-primary);
-  font-weight: bold;
+  /* font-weight: bold; */
+  font-size: 16px;
+  font-weight: 900;
 }
 
 .link {
